--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
 }
-body{
+
+body {
     background-color: #b1b1b1;
     font-family: 'Roboto', sans-serif;
 }
 
-header{
+header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -17,35 +19,119 @@ header{
     height: 60px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.486);
 }
-header .logo{
+
+header .logo {
     width: 42px;
     height: 42px;
     border-radius: 100px;
-    
+
 }
-header .logo img{
+
+header .logo img {
     width: 100%;
     height: 100%;
     border-radius: 100px;
 }
-header .menu{
+
+header .menu {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 220px;
 }
-header .menu a{
+
+header .menu a {
     text-decoration: none;
     color: rgb(150, 150, 150);
     font-size: 18px;
     transition: all 0.5s;
 }
 
-header .menu a:hover{
+header .menu a:hover {
     color: #cecece;
 }
 
-nav li{
+nav li {
     list-style-type: none;
 }
 
+.sub-menu {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 0 20px;
+    background-color: rgba(0, 0, 0, 0.548);
+    height: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.486);
+}
+
+.sub-menu a {
+    text-decoration: none;
+    color: rgb(150, 150, 150);
+    font-size: 15px;
+    transition: all 0.5s;
+}
+
+.sub-menu a:hover {
+    color: #cecece;
+}
+
+.menu2 li {
+    list-style-type: none;
+    margin-right: 40px;
+    border-right: 1px solid rgb(150, 150, 150);
+    padding-right: 40px;
+}
+
+.menu2 li:last-child {
+    border-right: none;
+    padding-right: 0;
+}
+
+.menu2 {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 220px;
+}
+
+.main-news {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: 300px 300px 350px;
+    grid-template-rows: 300px 300px;
+    background-color: #b1b1b1;
+    color: #444;
+    justify-content: center;
+    margin-top: 40px;
+    
+    
+}
+
+.box {
+    background-color: #444;
+    color: #fff;
+    border-radius: 5px;
+    padding: 20px;
+    font-size: 150%;
+}
+
+.a {
+    grid-column: 1 / 3;
+    grid-row: 1;
+}
+
+.b {
+    grid-column: 3;
+    grid-row: 1 / 3;
+}
+
+.c {
+    grid-column: 1;
+    grid-row: 2;
+}
+
+.d {
+    grid-column: 2;
+    grid-row: 2;
+}
