--- a/style.css
+++ b/style.css
@@ -6,18 +6,18 @@
 }
 
 body {
-    background-color: #b1b1b1;
+    background-color: #ffffff;
     font-family: 'Roboto', sans-serif;
 }
 
-header {
+.main_header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
     background-color: rgba(0, 0, 0, 0.692);
-    height: 60px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.486);
+    height: 90px;
+    
 }
 
 header .logo {
@@ -60,21 +60,22 @@ nav li {
     justify-content: space-evenly;
     align-items: center;
     padding: 0 20px;
-    background-color: rgba(0, 0, 0, 0.548);
-    height: 40px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.486);
+    background-color: rgba(0, 0, 0, 0.692);
+    height: 80px;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.274);
 }
 
 .menu2 a {
     text-decoration: none;
     color: rgb(150, 150, 150);
-    font-size: 15px;
+    font-size: 20px;
     transition: all 0.5s;
 }
 
 .menu2 a:hover {
     color: #cecece;
     transform: scale(1.1);
+    text-decoration: none;
 }
 
 .menu2 li {
@@ -97,43 +98,87 @@ nav li {
     width: 220px;
 }
 
-.main-news {
-    display: grid;
-    grid-gap: 10px;
-    grid-template-columns: 300px 300px 350px;
-    grid-template-rows: 300px 300px;
-    background-color: #b1b1b1;
-    color: #444;
-    justify-content: center;
-    margin-top: 40px;
-    
-    
+.breaking_news_container{
+    padding: 0 30px 0 20px;
+    display: flex;
+    background-color: rgba(0, 0, 0, 0.692);
 }
-
-.box {
-    background-color: #444;
+#btext{
+    width: 200px;
+    font-size: 16px;
+    text-transform: uppercase;
+    font-weight: 600;
+    color: rgba(201, 0, 0, 0.89);
+    margin: auto 0;
+}
+.breaking_news{
+    padding: 10px 30px;
     color: #fff;
-    border-radius: 5px;
-    padding: 20px;
-    font-size: 150%;
+    font-weight: 800;
+    display: inline-block;
+    text-decoration: none;
+    transition: all 0.5s;
+}
+.breaking_news:hover{
+    color: #cecece;
+    transform: scale(1.1);
+}
+.bntime{
+    display: inline-block;
+    color: rgb(255, 255, 255, 0.5);
+    padding: 0 10px;
+    font-size: 12px;
 }
 
-.a {
-    grid-column: 1 / 3;
-    grid-row: 1;
+#popular_news{
+	display: flex;
+	
+	margin: 30px 5%;
 }
 
-.b {
-    grid-column: 3;
-    grid-row: 1 / 3;
+#popular_news img{
+    width: 100%;
+    filter: brightness(0.7);
 }
 
-.c {
-    grid-column: 1;
-    grid-row: 2;
+#popular_news h2{
+    margin: 0;
+    padding: 5px;
+    color: white;
 }
-
-.d {
-    grid-column: 2;
-    grid-row: 2;
+#featured h2{
+    background-color: #444444;
+}
+#latest h2{
+    background-color: #fc5151;
+}
+#our_picks h2{
+    background-color: #026cc4bb;
+}
+.carousel, .news_container{
+    position: relative;
+    transition: all 0.5s;
+}
+.latest_news_text{
+    position: absolute; 
+    color: rgb(255, 255, 255);
+    z-index: 2;
+    bottom: 5px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    padding: 0 10px;
+    transition: all 0.5s;
+}
+#featured{
+    flex: 2;
+}
+#latest, #our_picks{
+    flex: 1;
+}
+.news_container:hover{
+    cursor: pointer;
+}
+.news_container:hover > .latest_news_text{
+    transform: translateY(-5px);
+    
 }
