--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap');
+@import url('https://fonts.googleapis.com/css?family=FontAwesome');
 
 * {
     margin: 0;
@@ -15,9 +16,9 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
-    background-color: rgba(0, 0, 0, 0.692);
+    background-color: #3b4ef7;
     height: 90px;
-    
+
 }
 
 header .logo {
@@ -60,9 +61,9 @@ nav li {
     justify-content: space-evenly;
     align-items: center;
     padding: 0 20px;
-    background-color: rgba(0, 0, 0, 0.692);
+    background-color: #3b4ef7;
     height: 80px;
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.274);
+
 }
 
 .menu2 a {
@@ -98,12 +99,13 @@ nav li {
     width: 220px;
 }
 
-.breaking_news_container{
+.breaking_news_container {
     padding: 0 30px 0 20px;
     display: flex;
-    background-color: rgba(0, 0, 0, 0.692);
+    background-color: #314ce2;
 }
-#btext{
+
+#btext {
     width: 200px;
     font-size: 16px;
     text-transform: uppercase;
@@ -111,7 +113,8 @@ nav li {
     color: rgba(201, 0, 0, 0.89);
     margin: auto 0;
 }
-.breaking_news{
+
+.breaking_news {
     padding: 10px 30px;
     color: #fff;
     font-weight: 800;
@@ -119,48 +122,56 @@ nav li {
     text-decoration: none;
     transition: all 0.5s;
 }
-.breaking_news:hover{
+
+.breaking_news:hover {
     color: #cecece;
     transform: scale(1.1);
 }
-.bntime{
+
+.bntime {
     display: inline-block;
     color: rgb(255, 255, 255, 0.5);
     padding: 0 10px;
     font-size: 12px;
 }
 
-#popular_news{
-	display: flex;
-	
-	margin: 30px 5%;
+#popular_news {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 30px 5%;
 }
 
-#popular_news img{
+#popular_news img {
     width: 100%;
     filter: brightness(0.7);
 }
 
-#popular_news h2{
+#popular_news h2 {
     margin: 0;
     padding: 5px;
     color: white;
 }
-#featured h2{
-    background-color: #444444;
+
+#featured h2 {
+    background-color: #3b4ef7;
 }
-#latest h2{
-    background-color: #fc5151;
+
+#latest h2 {
+    background-color: #3b4ef7;
 }
-#our_picks h2{
-    background-color: #026cc4bb;
+
+#our_picks h2 {
+    background-color: #3b4ef7;
 }
-.carousel, .news_container{
+
+.carousel,
+.news_container {
     position: relative;
     transition: all 0.5s;
 }
-.latest_news_text{
-    position: absolute; 
+
+.latest_news_text {
+    position: absolute;
     color: rgb(255, 255, 255);
     z-index: 2;
     bottom: 5px;
@@ -169,16 +180,83 @@ nav li {
     padding: 0 10px;
     transition: all 0.5s;
 }
-#featured{
+
+#featured {
     flex: 2;
+
 }
-#latest, #our_picks{
+
+#latest,
+#our_picks {
     flex: 1;
+
 }
-.news_container:hover{
+
+.news_container:hover {
     cursor: pointer;
 }
-.news_container:hover > .latest_news_text{
+
+.news_container:hover>.latest_news_text {
     transform: translateY(-5px);
-    
 }
+
+.sub-title1 {
+    margin-top: 50px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+.sub-title {
+    border-bottom: #314ce2 2px solid;
+}
+
+.news-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.news-item {
+    padding: 20px;
+}
+
+.news-item img {
+    width: 100%;
+    height: auto;
+}
+
+.news-item h2 {
+    margin: 10px;
+    border-bottom: #314ce2;
+}
+
+
+footer {
+    margin-top: 30px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+}
+
+footer p {
+    margin-bottom: 10px;
+}
+
+footer ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+footer li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+footer a {
+    color: #fff;
+}
+
