--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
-    background-color: #3b4ef7;
+    background-color: #5AD2F4;
     height: 90px;
 
 }
@@ -61,7 +61,7 @@ nav li {
     justify-content: space-evenly;
     align-items: center;
     padding: 0 20px;
-    background-color: #3b4ef7;
+    background-color: #5AD2F4;
     height: 80px;
 
 }
