--- a/styles/register.css
+++ b/styles/register.css
@@ -16,7 +16,7 @@ body{
 .container{
     width: 100%;
     max-width: 650px;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(215, 215, 215, 0.773);
     padding: 28px;
     margin: 0 28px;
     border-radius: 10px;
@@ -41,13 +41,13 @@ body{
 }
 
 .user-input-box:nth-child(2n){
-    justify-content:center;
+    justify-content: end;
 }
 
 .user-input-box{
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
+    width: 50%;
     padding-bottom: 15px;
 }
 
@@ -68,12 +68,30 @@ body{
     padding: 0 10px;
 }
 
+.gender-title{
+    color:white;
+    font-size: 24px;
+    font-weight: 600;
+    border-bottom: 1px solid white;
+}
+
+.gender-category{
+    margin: 15px 0;
+    color: white;
+}
+
+.gender-category label{
+    padding: 0 20px 0 5px;
+}
+
+.gender-category label,
+.gender-category input,
 .form-submit-btn input{
     cursor: pointer;
 }
 
 .form-submit-btn{
-    margin-top: 60px;
+    margin-top: 40px;
 }
 
 .form-submit-btn input{
@@ -85,11 +103,11 @@ body{
     border:none;
     border-radius: 3px;
     color: rgb(209, 209, 209);
-    background: rgba(63, 114, 76, 0.7);
+    background: rgba(17, 10, 230, 0.7);
 }
 
 .form-submit-btn input:hover{
-    background: rgba(56, 204, 93, 0.7);
+    background: rgba(11, 212, 222, 0.7);
     color: rgb(255, 255, 255);
 }
 
@@ -107,6 +125,12 @@ body{
         justify-content: space-between;
     }
 
+    .gender-category{
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+    }
+
     .main-user-info{
         max-height: 380px;
         overflow: auto;
@@ -116,8 +140,3 @@ body{
         width: 0;
     }
 }
-
-
-
-
-
