entrar e registar feitos

--- a/styles/index.css
+++ b/styles/index.css
@@ -8,7 +8,7 @@
 
 body {
     background-color: #ffffff;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Poppins", sans-serif
 }
 
 .main_header {
@@ -16,7 +16,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
-    background-color: #5AD2F4;
+    background-color:#13216c;
     height: 90px;
 
 }
@@ -43,7 +43,7 @@ header .menu {
 
 header .menu a {
     text-decoration: none;
-    color: rgb(150, 150, 150);
+    color: rgb(199, 190, 216);
     font-size: 18px;
     transition: all 0.5s;
 }
@@ -61,14 +61,14 @@ nav li {
     justify-content: space-evenly;
     align-items: center;
     padding: 0 20px;
-    background-color: #5AD2F4;
+    background-color: rgb(255, 255, 255);
     height: 80px;
 
 }
 
 .menu2 a {
     text-decoration: none;
-    color: rgb(150, 150, 150);
+    color: #13216c;
     font-size: 20px;
     transition: all 0.5s;
 }
@@ -102,7 +102,7 @@ nav li {
 .breaking_news_container {
     padding: 0 30px 0 20px;
     display: flex;
-    background-color: #314ce2;
+    background-color:#13216c;
 }
 
 #btext {
@@ -110,7 +110,7 @@ nav li {
     font-size: 16px;
     text-transform: uppercase;
     font-weight: 600;
-    color: rgba(201, 0, 0, 0.89);
+    color: rgba(255, 255, 255, 0.89);
     margin: auto 0;
 }
 
