--- a/styles/register.css
+++ b/styles/register.css
@@ -19,7 +19,7 @@ body {
 
 .wrapper {
     width: 700px;
-    height: 550px;
+    height: 600px;
     background: #fff;
     border-radius: 15px;
     box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.1);
@@ -115,6 +115,19 @@ form .field input[type="submit"] {
 form .field input[type="submit"]:active {
     transform: scale(0.95);
 }
+
+form .field input[type="button"]{
+    color: rgb(0, 0, 0);
+    border: none;
+    padding-left: 0;
+    margin-top: -10px;
+    font-size: 20px;
+    font-weight: 500;
+    cursor: pointer;
+    background: linear-gradient(-135deg, #bdb2bd, #7c83a9);
+    transition: all 0.3s ease;
+}
+
 form .signup-link {
     color: #262626;
     margin-top: 20px;
