mudar tudo para portugues

--- a/styles/index.css
+++ b/styles/index.css
@@ -153,15 +153,15 @@ nav li {
 }
 
 #featured h2 {
-    background-color: #3b4ef7;
+    background-color: #13216c;
 }
 
 #latest h2 {
-    background-color: #3b4ef7;
+    background-color: #13216c;
 }
 
 #our_picks h2 {
-    background-color: #3b4ef7;
+    background-color: #13216c;
 }
 
 .carousel,
