--- a/styles/categorias.css
+++ b/styles/categorias.css
@@ -353,3 +353,15 @@ footer a {
     max-height: 500px;
 
 }
+
+@keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
+
+  #contactAnimation{
+    display: none;
+    justify-content: center;
+    margin-left: 346px;
+      
+  }
