--- a/styles/individual.css
+++ b/styles/individual.css
@@ -286,3 +286,14 @@ footer a {
     align-items: center;
     margin: 50px;
 }
+
+@keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
+  #contactAnimation{
+      display: none;
+      justify-content: center;
+      margin-left: 346px;
+      
+  }
