--- a/styles/categorias.css
+++ b/styles/categorias.css
@@ -35,7 +35,7 @@ header .logo img {
 
 header .menu {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     width: 220px;
 }
@@ -243,19 +243,19 @@ footer a {
 
 * {box-sizing:border-box}
 
-/* Slideshow container */
+
 .slideshow-container {
   max-width: 1000px;
   position: relative;
   margin: auto;
 }
 
-/* Hide the images by default */
+
 .mySlides {
   display: none;
 }
 
-/* Next & previous buttons */
+
 .prev, .next {
   cursor: pointer;
   position: absolute;
@@ -271,18 +271,17 @@ footer a {
   user-select: none;
 }
 
-/* Position the "next button" to the right */
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
+
 .prev:hover, .next:hover {
   background-color: rgba(0,0,0,0.8);
 }
 
-/* Caption text */
+
 .text {
   color: #f2f2f2;
   font-size: 15px;
@@ -293,7 +292,7 @@ footer a {
   text-align: center;
 }
 
-/* Number text (1/3 etc) */
+
 .numbertext {
   color: #f2f2f2;
   font-size: 12px;
@@ -302,7 +301,7 @@ footer a {
   top: 0;
 }
 
-/* The dots/bullets/indicators */
+
 .dot {
   cursor: pointer;
   height: 15px;
@@ -318,7 +317,7 @@ footer a {
   background-color: #717171;
 }
 
-/* Fading animation */
+
 .fade {
   animation-name: fade;
   animation-duration: 1.5s;
@@ -359,9 +358,39 @@ footer a {
     to {opacity: 1}
   }
 
-  #contactAnimation{
+#contactAnimation{
     display: none;
     justify-content: center;
     margin-left: 346px;
       
-  }
+}
+
+.termos-uso{
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.termos-uso h3{
+    font-size: 22px;
+    font-weight: bold;
+    margin: 20px;
+}
+
+.termos-uso p{
+    font-size: 18px;
+    margin-left: 400px;
+    margin-right: 400px;
+    margin-bottom: 50px;
+    text-align: justify;
+}
+
+.termos-uso ul li {
+    font-size: 20px;
+    margin-left: 400px;
+    margin-right: 400px;
+    margin-bottom: 50px;
+    text-align: justify;
+}
